fixing buttons on mobile

--- a/src/styles/components/channelSelector.scss
+++ b/src/styles/components/channelSelector.scss
@@ -105,6 +105,7 @@
         &.clicked {
           background-color: red;
           padding-left: 10px;
+          margin: 0px 0px 0px 0px;
         }
       }
       button {
