--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -57,7 +57,7 @@ div.redditTVContainer {
           }
 
           @media screen and (max-width: $screen-lg-min) {
-            margin-top: 50px;
+            margin-top: 4.5rem;
           }
 
           .videoPlayer {
